# breda_actes_new

./: pyproject.toml  requirements.txt  rxconfig.py
breda_py/: breda_py.py
breda_py/components/: image_uploader.py
breda_py/lib/: error_handling.py  gemini.py  gemini_client.py  google.py  googleSheets.py
breda_py/lib/controllers/: google_client.py
breda_py/pages/: factures.py  formulary.py  login.py  uploader.py
breda_py/services/: gemini_service.py  sheets_service.py  supabase_service.py
breda_py/services/google_clients/: google_client.py
breda_py/services/google_clients/gemini_utils/: prompts.py
breda_py/services/supabase_client/: supabase_client.py
breda_py/state/: auth_state.py
