[project]
name = "breda-actes-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==1.48.0",
    "gspread==5.7.2",
    "pillow==12.0.0",
    "python-dotenv==1.1.1",
    "reflex==0.8.13",
    "supabase>=2.24.0",
]
